trunk/Archive2/cd/00e3abf6bca06b/output
In file included from /usr/local/include/c++/4.9.2/bits/stl_algobase.h:71:0,
                 from /usr/local/include/c++/4.9.2/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.2/ios:40,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/predefined_ops.h: In instantiation of 'bool __gnu_cxx::__ops::_Iter_equals_val<_Value>::operator()(_Iterator) [with _Iterator = __gnu_cxx::__normal_iterator<n::T*, std::vector<n::T> >; _Value = const n::T]':
/usr/local/include/c++/4.9.2/bits/stl_algo.h:120:22:   required from '_RandomAccessIterator std::__find_if(_RandomAccessIterator, _RandomAccessIterator, _Predicate, std::random_access_iterator_tag) [with _RandomAccessIterator = __gnu_cxx::__normal_iterator<n::T*, std::vector<n::T> >; _Predicate = __gnu_cxx::__ops::_Iter_equals_val<const n::T>]'
/usr/local/include/c++/4.9.2/bits/stl_algo.h:162:43:   required from '_Iterator std::__find_if(_Iterator, _Iterator, _Predicate) [with _Iterator = __gnu_cxx::__normal_iterator<n::T*, std::vector<n::T> >; _Predicate = __gnu_cxx::__ops::_Iter_equals_val<const n::T>]'
/usr/local/include/c++/4.9.2/bits/stl_algo.h:3779:50:   required from '_IIter std::find(_IIter, _IIter, const _Tp&) [with _IIter = __gnu_cxx::__normal_iterator<n::T*, std::vector<n::T> >; _Tp = n::T]'
main.cpp:21:29:   required from here
/usr/local/include/c++/4.9.2/bits/predefined_ops.h:191:17: error: no match for 'operator==' (operand types are 'n::T' and 'const n::T')
  { return *__it == _M_value; }
                 ^
/usr/local/include/c++/4.9.2/bits/predefined_ops.h:191:17: note: candidates are:
In file included from /usr/local/include/c++/4.9.2/bits/stl_algobase.h:67:0,
                 from /usr/local/include/c++/4.9.2/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.2/ios:40,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/stl_iterator.h:808:5: note: template<class _IteratorL, class _IteratorR, class _Container> bool __gnu_cxx::operator==(const __gnu_cxx::__normal_iterator<_IteratorL, _Container>&, const __gnu_cxx::__normal_iterator<_IteratorR, _Container>&)
     operator==(const __normal_iterator<_IteratorL, _Container>& __lhs,
     ^
/usr/local/include/c++/4.9.2/bits/stl_iterator.h:808:5: note:   template argument deduction/substitution failed:
In file included from /usr/local/include/c++/4.9.2/bits/stl_algobase.h:71:0,
                 from /usr/local/include/c++/4.9.2/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.2/ios:40,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/predefined_ops.h:191:17: note:   'n::T' is not derived from 'const __gnu_cxx::__normal_iterator<_IteratorL, _Container>'
  { return *__it == _M_value; }
                 ^
In file included from /usr/local/include/c++/4.9.2/bits/stl_algobase.h:67:0,
                 from /usr/local/include/c++/4.9.2/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.2/ios:40,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/stl_iterator.h:815:5: note: template<class _Iterator, class _Container> bool __gnu_cxx::operator==(const __gnu_cxx::__normal_iterator<_Iterator, _Container>&, const __gnu_cxx::__normal_iterator<_Iterator, _Container>&)
     operator==(const __normal_iterator<_Iterator, _Container>& __lhs,
     ^
/usr/local/include/c++/4.9.2/bits/stl_iterator.h:815:5: note:   template argument deduction/substitution failed:
In file included from /usr/local/include/c++/4.9.2/bits/stl_algobase.h:71:0,
                 from /usr/local/include/c++/4.9.2/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.2/ios:40,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/predefined_ops.h:191:17: note:   'n::T' is not derived from 'const __gnu_cxx::__normal_iterator<_Iterator, _Container>'
  { return *__it == _M_value; }
                 ^
In file included from /usr/local/include/c++/4.9.2/x86_64-unknown-linux-gnu/bits/c++allocator.h:33:0,
                 from /usr/local/include/c++/4.9.2/bits/allocator.h:46,
                 from /usr/local/include/c++/4.9.2/string:41,
                 from /usr/local/include/c++/4.9.2/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.2/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.2/ios:42,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/ext/new_allocator.h:139:5: note: template<class _Tp> bool __gnu_cxx::operator==(const __gnu_cxx::new_allocator<_Tp>&, const __gnu_cxx::new_allocator<_Tp>&)
     operator==(const new_allocator<_Tp>&, const new_allocator<_Tp>&)
     ^
/usr/local/include/c++/4.9.2/ext/new_allocator.h:139:5: note:   template argument deduction/substitution failed:
In file included from /usr/local/include/c++/4.9.2/bits/stl_algobase.h:71:0,
                 from /usr/local/include/c++/4.9.2/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.2/ios:40,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/predefined_ops.h:191:17: note:   'n::T' is not derived from 'const __gnu_cxx::new_allocator<_Tp>'
  { return *__it == _M_value; }
                 ^
